--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -20,6 +20,12 @@
 	margin: 1rem 0;
 }
 
+.headingLgNavBar {
+	font-size: 1.5rem;
+	line-height: 1.4;
+	margin: 1rem 1rem;
+}
+
 .headingMd {
 	font-size: 1.2rem;
 	line-height: 1.5;
